--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.7",
     "three": "^0.180.0",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/three": "^0.180.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.32",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
