--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.542.0",
     "next": "^15.5.2",
     "next-intl": "^4.3.6",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postcss": "^8.5.6",
